// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Table Head should render properly with dark background 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  background-color: transparent;
}

.c7 {
  overflow: visible;
  font-size: 2rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c3 {
  padding: 1rem 1.6rem;
  display: flex;
  align-items: center;
}

.c1 {
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: flex;
  align-items: center;
  position: relative;
  justify-content: flex-start;
}

.c1::after {
  content: '';
  width: calc(100% - 1.6rem);
  margin: 0 0.8rem;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: transparent;
  height: 0.2rem;
  transition: all 100ms ease-out;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c1 .c2:hover {
  cursor: pointer;
}

.c1 .c2:hover .c4 {
  color: #5687D9;
}

.c1 .c2:hover .c6 * {
  fill: #5687D9;
}

.c1 .c4 {
  transition: all 100ms ease-out;
  user-select: none;
  display: inline;
  color: #435465;
}

.c1 .c6 {
  transition: all 100ms ease-out;
  width: 2.4rem;
  cursor: pointer;
  padding-left: 0.4rem;
}

.c1 .c6 * {
  fill: #435465;
}

<div>
  <table>
    <thead>
      <tr
        class="c0"
        gridtemplatecolumns="1fr 1fr "
      >
        <th
          align="left"
          class="c1"
        >
          <span
            class="c2 c3"
          >
            <h5
              class="c4 c5"
              textalign="initial"
              textcolor="inherit"
              textvariant="h5"
            >
              Patient Info
            </h5>
            <svg
              class="c6 c7"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </span>
        </th>
        <th
          align="left"
          class="c1"
        >
          <span
            class="c2 c3"
          >
            <h5
              class="c4 c5"
              textalign="initial"
              textcolor="inherit"
              textvariant="h5"
            >
              RxInfo
            </h5>
            <svg
              class="c6 c7"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Card Table Head should render properly with light background 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  background-color: transparent;
}

.c7 {
  overflow: visible;
  font-size: 2rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c3 {
  padding: 1rem 1.6rem;
  display: flex;
  align-items: center;
}

.c1 {
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: flex;
  align-items: center;
  position: relative;
  justify-content: flex-start;
}

.c1::after {
  content: '';
  width: calc(100% - 1.6rem);
  margin: 0 0.8rem;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: transparent;
  height: 0.2rem;
  transition: all 100ms ease-out;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c1 .c2:hover {
  cursor: pointer;
}

.c1 .c2:hover .c4 {
  color: #5687D9;
}

.c1 .c2:hover .c6 * {
  fill: #5687D9;
}

.c1 .c4 {
  transition: all 100ms ease-out;
  user-select: none;
  display: inline;
  color: #607890;
}

.c1 .c6 {
  transition: all 100ms ease-out;
  width: 2.4rem;
  cursor: pointer;
  padding-left: 0.4rem;
}

.c1 .c6 * {
  fill: #607890;
}

<div>
  <table>
    <thead>
      <tr
        class="c0"
        gridtemplatecolumns="1fr 1fr "
      >
        <th
          align="left"
          class="c1"
        >
          <span
            class="c2 c3"
          >
            <h5
              class="c4 c5"
              textalign="initial"
              textcolor="inherit"
              textvariant="h5"
            >
              Patient Info
            </h5>
            <svg
              class="c6 c7"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </span>
        </th>
        <th
          align="left"
          class="c1"
        >
          <span
            class="c2 c3"
          >
            <h5
              class="c4 c5"
              textalign="initial"
              textcolor="inherit"
              textvariant="h5"
            >
              RxInfo
            </h5>
            <svg
              class="c6 c7"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;
